--- a/index.html
+++ b/index.html
@@ -22,21 +22,93 @@
                 <li><a href=""><img src="logos/Vector.png" alt=""></a></li>
             </ul>
         </nav>
-
         <section class="banner container">
             <div class="banner-text">
-                <h3 class="banner-title">Start your Journey as 
+                <h3 class="banner-title">Start your Journey as
                     Influencer</h3>
-                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum
+                    sed scelerisque eros. Lectus faucibus.</p>
                 <button class="banner-btn">Preebook now</button>
+
             </div>
             <div class="banner-img">
-                   <img src="images/main-camera.png" alt="">
+                <img src="images/main-camera.png" alt="">
             </div>
         </section>
     </header>
     <main>
+        <section class="company container">
+            <div class="company-logo">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+            </div>
+        </section>
 
+
+        <section class="container">
+            <h5 class="section-title">Popular Collection</h5>
+            <div class="collection">
+                <div class="collection-card">
+                    <img src="images/tripod.png" alt="" class="collection-img">
+                    <h3 class="collection-title">Flex Tripod</h3>
+                    <p class="price">$50.48</p>
+                    <p class="name">Wordwide shifting </p>
+                </div>
+                <div class="collection-card">
+                    <img src="images/mic.png" alt="" class="collection-img">
+                    <h3 class="collection-title">Microphone</h3>
+                    <p class="price">$100.48</p>
+                    <p class="name">Wordwide shifting </p>
+                </div>
+                <div class="collection-card">
+                    <img src="images/airpod.png" alt="" class="collection-img">
+                    <h3 class="collection-title">Airbuds</h3>
+                    <p class="price">$550.40</p>
+                    <p class="name">Wordwide shifting </p>
+                </div>
+                <div class="collection-card">
+                    <img src="images/drone.png" alt="" class="collection-img">
+                    <h3 class="collection-title">Drone</h3>
+                    <p class="price">$150.48</p>
+                    <p class="name">Wordwide shifting </p>
+                </div>
+                <div class="collection-card">
+                    <img src="images/lights.png" alt="" class="collection-img">
+                    <h3 class="collection-title">Light Setup</h3>
+                    <p class="price">$200.48</p>
+                    <p class="name">Wordwide shifting </p>
+                </div>
+                <div class="collection-card">
+                    <img src="images/setup.png" alt="" class="collection-img">
+                    <h3 class="collection-title">Photoshoot set</h3>
+                    <p class="price">$520.48</p>
+                    <p class="name">Wordwide shifting </p>
+                </div>
+                <div class="collection-card">
+                    <img src="images/camera.png" alt="" class="collection-img">
+                    <h3 class="collection-title">Vlogging Camera</h3>
+                    <p class="price">$5000.48</p>
+                    <p class="name">Wordwide shifting </p>
+                </div>
+                <div class="collection-card">
+                    <img src="images/single-light.png" alt="" class="collection-img">
+                    <h3 class="collection-title">Green Screen</h3>
+                    <p class="price">$500.88</p>
+                    <p class="name">Wordwide shifting </p>
+                </div>
+                <div class="collection-card">
+                    <img src="images/action.png" alt="" class="collection-img">
+                    <h3 class="collection-title">Action Camera</h3>
+                    <p class="price">$505.58</p>
+                    <p class="name">Wordwide shifting </p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
