Project Complited,create featured section and footer section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@
                 <img src="logos/Walmart.svg" alt="">
             </div>
         </section>
-
-
         <section class="container">
             <h5 class="section-title">Popular Collection</h5>
             <div class="collection">
@@ -108,10 +106,31 @@
                     <p class="name">Wordwide shifting </p>
                 </div>
             </div>
+            <div class="arrow-icon">
+                <button class="btn-icon">See More</button>
+            </div>
+        </section>
+
+        <section class="featured container">
+            <div class="featured-img">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="featured-content">
+                <h3 class="featured-title">Featured products at one place</h3>
+                <p class="featured-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                    amet.</p>
+                <button class="featured-btn">Join Now</button>
+            </div>
         </section>
     </main>
     <footer>
-
+        <div class="footer">
+            <div class="footer-content">
+                <h4 class="footer-title">Influencer products</h4>
+                <p class="footer-description">Copyright © 2020 influencer products All rights reserved</p>
+            </div>
+        </div>
     </footer>
 </body>
 
